2024-04-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor progress bar code
	* Add check_progress unit test
	* Add missing library CFLAGS
	* Add basic check_base64 unit test

2024-04-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add check_seltree unit test

2024-04-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix compiler warnings
	* Fix 64-bit time_t on 32-bit architectures
	* Fix typo in aide.conf manual page (closes: #165)

2024-01-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix debug logging for returned attributes

2024-01-14 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Code cleanup and log improvements

2024-01-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Code cleanup (remove strip_dbline function)

2024-01-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing command and option to --help output

2023-12-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Only remove incompletely written db file if it was created by aide
	* Show number of skipped files on progress bar

2023-12-29 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Improve logging
	  - move COMPARE log level before RULE log level
	  - remove redundant log messages
	  - move some log messages from lower to upper log levels
	  - improve locking

2023-12-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor signal handling (closes: #147)
	  - do not ignore SIGHUP and SIGTERM signals
	  - remove incompletely written database and exit on SIGHUP, SIGTERM
	    or SIGINT
	  - add exit code 25 for signal interruptions
	  - Update SIGNAL HANDLING section of aide.1 manual page
	* Fix compiler warnings for printf style functions
	* Add colors to log output (add '--no-color' parameter)

2023-12-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle an incompletely written input database as an error

2023-12-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add '--list' command to list the entries of the database in
	  human-readable format (closes: #9)
