@@ -249,59 +249,3 @@ byte* decode_base64(char* src,size_t ssize, size_t *ret_len)
   
   return outbuf;
 }
-
-size_t length_base64(char* src,size_t ssize)
-{
-  char* inb;
-  int i;
-  int l;
-  int left;
-  size_t pos;
-
-  /* Exit on empty input */
-  if (!ssize||src==NULL) {
-    log_msg(LOG_LEVEL_DEBUG,"length_base64: empty string");
-    return 0;
-  }
-
-
-
-  /* Initialize working pointers */
-  inb = src;
-
-  l = 0;
-  pos=0;
-  left = ssize;
-  /*
-   * Process entire inbuf.
-   */
-  while (left != 0)
-    {
-      left--;
-      i = fromb64[(unsigned char)*inb];
-      switch(i)
-	{
-	case FAIL:
-	  log_msg(LOG_LEVEL_DEBUG, "length_base64: illegal string: '%s'", src);
-	  return 0; 
-	  break;
-	case SKIP:
-	  break;
-	default:
-	  l++;
-	  break;
-	}
-      if (l == 4 || left == 0)
-	{
-	  for (l  -= 2; l >= 0; l--)
-	    {
-	      pos++;
-	    }
-	  l = 0;
-	}
-      inb++;
-    }
-  
-  return pos;
-}
-
