@@ -3,6 +3,7 @@
 	* Add check_progress unit test
 	* Add missing library CFLAGS
 	* Add basic check_base64 unit test
+	* Remove unused length_base64 function
 
 2024-04-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Add check_seltree unit test
